# net

./: .gitignore  CMakeLists.txt  LICENSE  Layer.hh  Net.hh  Neuron.hh  README.md  Trainer.hh
test/: CMakeLists.txt  array.cc  common.hh  net_functions.cc  net_xor.cc  simple_functions.cc  simple_xor.cc
